--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,11 +1,11 @@
 {% extends "bootstrap/base.html" %}
 
-{% block title %}CityShare{% endblock %}
+{% block title %}Intranet{% endblock %}
 
 {% block head %}
 {{ super() }}
-<link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}" type="image/x-icon">
-<link rel="icon" href="{{ url_for('static', filename='favicon.ico') }}" type="image/x-icon">
+<link rel="shortcut icon" href="{{ url_for('static', filename='nycgov.ico') }}" type="image/x-icon">
+<link rel="icon" href="{{ url_for('static', filename='nycgov.ico') }}" type="image/x-icon">
 {% endblock %}
 
 {% block navbar %}
