--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}CityShare{% endblock %}
+{% block title %}Intranet{% endblock %}
 
 {% import "_macros.html" as macros %}
 
