--- a/app/templates/_posts.html
+++ b/app/templates/_posts.html
@@ -18,6 +18,10 @@
             <a href="{{ url_for('.edit', id=post.id) }}">
                 <span class="label label-primary">Edit</span>
             </a>
+        {% elif current_user.is_administrator() %}
+            <a href="{{ url_for('.edit', id=post.id) }}">
+                <span class="label label-danger">Edit [Admin]</span>
+            </a>
         {% endif %}
     </div>
 {% endfor %}
