--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,5 +1,7 @@
 {% extends "bootstrap/base.html" %}
 
+<link rel="stylesheet" href="{{ url_for('static', filename='css/stylesheet.css') }}" type="text/css">
+
 {% block title %}Intranet{% endblock %}
 
 {% block head %}
@@ -25,9 +27,24 @@
             <ul class="nav navbar-nav">
                 <li><a href="{{ url_for('main.index') }}">Home</a></li>
             </ul>
+            <ul class="nav navbar-nav">
+                <li><a href="{{ url_for('main.citytime') }}">CityTime</a></li>
+            </ul>
+            <ul class="nav navbar-nav">
+                <li><a href="{{ url_for('main.nycaps') }}">NYCAPS</a></li>
+            </ul>
+            <ul class="nav navbar-nav">
+                <li><a href="{{ url_for('main.recordstimeclock') }}">TimeClock</a></li>
+            </ul>
+            <ul class="nav navbar-nav">
+                <li><a href="{{ url_for('main.cityshare') }}">CityShare</a></li>
+            </ul>
+            <ul class="nav navbar-nav">
+                <li><a href="{{ url_for('main.mis') }}">MIS</a></li>
+            </ul>
             <ul class="nav navbar-nav navbar-right">
                 {% if current_user.is_authenticated() %}
-                <h12><font color= "white">{{ current_user.username }}</font></h12>
+                <h12>{{ current_user.username }}</h12>
                 <li><a href="{{ url_for('auth.logout') }}">Log Out</a></li>
                 {% else %}
                 <li><a href="{{ url_for('auth.login') }}">Log In</a></li>
