--- a/app/templates/auth/register.html
+++ b/app/templates/auth/register.html
@@ -4,10 +4,9 @@
 {% block title %}Register{% endblock %}
 
 {% block page_content %}
-<div class="page-header">
+<div class="section">
     <h1>Register</h1>
-</div>
-<div class="col-md-4">
     {{ wtf.quick_form(form) }}
+</div>
 </div>
 {% endblock %}
