--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,18 +1,16 @@
 {% extends "bootstrap/base.html" %}
 
-<link rel="stylesheet" href="{{ url_for('static', filename='css/stylesheet.css') }}" type="text/css">
-
 {% block title %}Intranet{% endblock %}
 
 {% block head %}
+<link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}" type="text/css">
 {{ super() }}
 <link rel="shortcut icon" href="{{ url_for('static', filename='nycgov.ico') }}" type="image/x-icon">
 <link rel="icon" href="{{ url_for('static', filename='nycgov.ico') }}" type="image/x-icon">
 {% endblock %}
 
 {% block navbar %}
-<div class="navbar navbar-inverse" role="navigation">
-    <div class="container">
+<div class="nav" role="navigation">
         <div class="navbar-header">
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
                 <span class="sr-only">Toggle navigation</span>
@@ -20,43 +18,35 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="{{ url_for('main.index') }}">CityShare</a>
-            <p><h12><font color= "white">New York City's Employee Portal</font></h12></p>
+            <a id="navbar-brand" href="{{ url_for('main.index') }}">Intranet</a>
+            <div id="desc"><h12>NYC Records</h12></div>
         </div>
-        <div class="navbar-collapse collapse">
-            <ul class="nav navbar-nav">
-                <li><a href="{{ url_for('main.index') }}">Home</a></li>
-            </ul>
-            <ul class="nav navbar-nav">
-                <li><a href="{{ url_for('main.citytime') }}">CityTime</a></li>
-            </ul>
-            <ul class="nav navbar-nav">
-                <li><a href="{{ url_for('main.nycaps') }}">NYCAPS</a></li>
-            </ul>
-            <ul class="nav navbar-nav">
-                <li><a href="{{ url_for('main.recordstimeclock') }}">TimeClock</a></li>
-            </ul>
-            <ul class="nav navbar-nav">
-                <li><a href="{{ url_for('main.cityshare') }}">CityShare</a></li>
-            </ul>
-            <ul class="nav navbar-nav">
-                <li><a href="{{ url_for('main.mis') }}">MIS</a></li>
-            </ul>
-            <ul class="nav navbar-nav navbar-right">
+        <div id="nav-right">
+            <ul>
                 {% if current_user.is_authenticated() %}
-                <h12>{{ current_user.username }}</h12>
-                <li><a href="{{ url_for('auth.logout') }}">Log Out</a></li>
+                <li><a href="{{ url_for('auth.logout') }}">Logout</a></li>
                 {% else %}
-                <li><a href="{{ url_for('auth.login') }}">Log In</a></li>
+                <li><a href="{{ url_for('auth.login') }}">Login</a></li>
                 {% endif %}
             </ul>
+            <div id="showuser"><h12>{{ current_user.username }}</h12></div>
         </div>
-    </div>
+</div>
+
+<div class="aside">
+    <ul class="menu">
+        <li><a href="{{ url_for('main.index') }}">Home</a></li>
+        <li><a href="{{ url_for('main.citytime') }}">CityTime</a></li>
+        <li><a href="{{ url_for('main.nycaps') }}">NYCAPS</a></li>
+        <li><a href="{{ url_for('main.recordstimeclock') }}">TimeClock</a></li>
+        <li><a href="{{ url_for('main.cityshare') }}">CityShare</a></li>
+        <li><a href="{{ url_for('main.mis') }}">MIS</a></li>
+    </ul>
 </div>
 {% endblock %}
 
 {% block content %}
-<div class="container">
+<div class="section">
     {% for message in get_flashed_messages() %}
     <div class="alert alert-warning">
         <button type="button" class="close" data-dismiss="alert">&times;</button>
