--- a/app/templates/edit_post.html
+++ b/app/templates/edit_post.html
@@ -4,7 +4,7 @@
 {% block title %}Edit Post{% endblock %}
 
 {% block page_content %}
-<div class="page-header">
+<div id="page-header">
     <h1>Edit Post</h1>
 </div>
 <div>
