--- a/app/templates/_posts.html
+++ b/app/templates/_posts.html
@@ -18,9 +18,15 @@
             <a href="{{ url_for('.edit', id=post.id) }}">
                 <span class="label label-primary">Edit</span>
             </a>
+            <a href="{{ url_for('.delete', id=post.id) }}">
+                <span class="label label-danger">Delete</span>
+            </a>
         {% elif current_user.is_administrator() %}
             <a href="{{ url_for('.edit', id=post.id) }}">
-                <span class="label label-danger">Edit [Admin]</span>
+                <span class="label label-primary">Edit [Admin]</span>
+            </a>
+            <a href="{{ url_for('.delete', id=post.id) }}">
+                <span class="label label-danger">Delete</span>
             </a>
         {% endif %}
     </div>
