--- a/app/templates/auth/login.html
+++ b/app/templates/auth/login.html
@@ -4,8 +4,10 @@
 {% block title %}Login{% endblock %}
 
 {% block page_content %}
-<div class="section">
-    <h1>Login</h1>
+<div class="page-header">
+    <h2>Login</h2>
+</div>
+<div id="page-body">
     {{ wtf.quick_form(form) }}
     <br>
     <h6>New user? <a href="{{ url_for('auth.register') }}">Click here to register</a>.</h6>
