--- a/app/templates/auth/register.html
+++ b/app/templates/auth/register.html
@@ -4,8 +4,10 @@
 {% block title %}Register{% endblock %}
 
 {% block page_content %}
-<div class="section">
-    <h1>Register</h1>
+<div class="page-header">
+    <h2>Register</h2>
+</div>
+<div id="page-body">
     {{ wtf.quick_form(form) }}
 </div>
 </div>
