--- a/app/templates/edit_post.html
+++ b/app/templates/edit_post.html
@@ -4,10 +4,10 @@
 {% block title %}Edit Post{% endblock %}
 
 {% block page_content %}
-<div id="page-header">
-    <h1>Edit Post</h1>
+<div class="page-header">
+    <h2>Edit Post</h2>
 </div>
-<div>
+<div id="page-body">
     {{ wtf.quick_form(form) }}
 </div>
 {% endblock %}
