--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -217,3 +217,22 @@ ul > h10 {
 	background-color: #62009b !important;
 	border-color: #007F3B !important;
 }
+
+#toolbar {
+    border: 1px solid #e5e5e5;
+    width: 50%;
+    margin: 20px auto;
+    box-shadow: 2px 1px 5px rgba(0,0,0,0.2);
+}
+
+#editor {
+    width: 50%;
+    margin: 20px auto;
+    box-shadow: 2px 1px 5px rgba(0,0,0,0.2);
+    border: 1px solid #e5e5e5;
+    height: 300px;
+}
+
+#full-toolbar{border-bottom:1px solid #ccc;}
+
+.quill-wrapper{background-color:#fff;border-left:1px solid #ccc;border-right:1px solid #ccc;box-shadow:0px 0px 10px #ccc;margin-left:auto;margin-right:auto;max-width:600px;min-width:320px;width:100%;}
