--- a/app/templates/_posts.html
+++ b/app/templates/_posts.html
@@ -7,7 +7,7 @@
     {% if post.text_html %}
         {{ post.text_html | safe }}
     {% else %}
-        {{ markdown2.markdown(post.text) }}
+        {{ post.text }}
     {% endif %}
     </h5>
     <div class="post-footer">
