--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -4,6 +4,8 @@
 
 {% block head %}
 <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}" type="text/css">
+<link rel="stylesheet" href="{{ url_for('static', filename='css/quill.snow.css') }}" type="text/css">
+<link rel="stylesheet" href="{{ url_for('static', filename='css/quill.base.css') }}" type="text/css">
 {{ super() }}
 <link rel="shortcut icon" href="{{ url_for('static', filename='nycgov.ico') }}" type="image/x-icon">
 <link rel="icon" href="{{ url_for('static', filename='nycgov.ico') }}" type="image/x-icon">
@@ -60,7 +62,8 @@
 {% endblock %}
 
 {% block scripts %}
+<script src="{{ url_for('static', filename='js/quill.min.js') }}"></script>
+<script src="{{ url_for('static', filename='js/quill.js') }}"></script>
 {{ super() }}
-{{ pagedown.include_pagedown() }}
 {{ moment.include_moment() }}
 {% endblock %}
