--- a/app/templates/new_post.html
+++ b/app/templates/new_post.html
@@ -8,7 +8,40 @@
     <h2>New Post</h2>
 </div>
 <div id="page-body">
-    <meta charset="utf-8">
-    {{ wtf.quick_form(form) }}
+    <form name="input" class="form-horizontal" id="submitPost" method="post">
+        <div class="lead">Tag
+            <div class="control-group">
+                <select name="input_tag">
+	                <option value="1">1</option>
+	 			    <option value="2">2</option>
+	 			    <option value="3">3</option>
+	 			    <option value="4">4</option>
+	 			    <option value="5">5</option>
+	 			    <option value="6">6</option>
+			    </select>
+            </div>
+        </div>
+        <div class="lead">Title
+            <div class="control-group">
+                <input class="input-block-level" name="input_title" title="input_title" name="Title"/>
+            </div>
+        </div>
+        <div class="lead">Text
+            <div class="control-group">
+                <textarea id="editor1" name="editor1"></textarea>
+            </div>
+        </div>
+        <div id="requestButton" class="control-group">
+            <div>
+                <button type="submit" title="submit_post" class="btn btn-primary">Submit</button>
+            </div>
+        </div>
+    </form>
 </div>
+{% endblock %}
+{% block scripts %}
+<script src="//cdn.ckeditor.com/4.4.7/full/ckeditor.js"></script>
+<script type="text/javascript">
+    CKEDITOR.replace( 'editor1' );
+</script>
 {% endblock %}
