--- a/app/templates/new_post.html
+++ b/app/templates/new_post.html
@@ -9,22 +9,9 @@
 </div>
 <div id="page-body">
     <form name="input" class="form-horizontal" id="submitPost" method="post">
-        <div class="lead">Tag
+        <div class="lead">Tags
             <div class="control-group">
-                <select name="input_tag" required>
-                    <option selected disabled hidden value=''></option>
-	                <option value="1">1</option>
-	 			    <option value="2">2</option>
-	 			    <option value="3">3</option>
-	 			    <option value="4">4</option>
-	 			    <option value="5">5</option>
-	 			    <option value="6">6</option>
-			    </select>
-            </div>
-        </div>
-        <div class="lead">Categories
-            <div class="control-group">
-                <input type="text" name="input_category" id="categories" value="archives,events" tabindex="-1" style="display: block;">
+                <input type="text" name="input_tag" id="tags" value="" tabindex="-1" style="display: block;">
             </div>
         </div>
         <div class="lead">Title
@@ -47,12 +34,16 @@
 {% endblock %}
 
 {% block scripts %}
-<script>
-var data = {{ categories }};
+<script type="text/javascript" src="{{ url_for('static', filename='js/jquery-1.10.2.min.js') }}"></script>
+<script type="text/javascript" src="{{ url_for('static', filename='js/selectize.min.js') }}"></script>
+<script type="text/javascript" src="{{ url_for('static', filename='js/selectize.js') }}"></script>
+<script type="text/javascript">
+var data = {{ tags | safe }};
 var items = data.map(function(x) { return { item: x }; });
 
-$('#categories').selectize({
-    delimiter: ',',
+$(document).ready(function() {
+$('#tags').selectize({
+    delimiter: ', ',
     persist: false,
     options: items,
     labelField: "item",
@@ -64,11 +55,11 @@ $('#categories').selectize({
             value: input,
             text: input
         }
-    }
+    },
+    create: true
+});
 });
 </script>
-<script type="text/javascript" src="{{ url_for('static', filename='js/jquery-1.10.2.min.js') }}"></script>
-<script type="text/javascript" src="{{ url_for('static', filename='js/selectize.min.js') }}"></script>
 <script type="text/javascript" src="//cdn.ckeditor.com/4.4.7/full/ckeditor.js"></script>
 <script type="text/javascript">
     CKEDITOR.replace( 'editor1' );
