--- a/app/templates/_posts.html
+++ b/app/templates/_posts.html
@@ -11,7 +11,7 @@
         <a href="{{ url_for('.post', id=post.id) }}#comments">
             <span class="label label-primary">{{ post.comments.count() }} Comments</span>
         </a>
-        {% for tag in tags %}
+        {% for tag in tagList %}
             <a href="{{ url_for('.tag', tag=tag.name) }}">
                 <span class="label label-primary">{{ tag }}</span>
             </a>
