--- a/app/templates/edit_post.html
+++ b/app/templates/edit_post.html
@@ -11,7 +11,7 @@
     <form name="input" class="form-horizontal" id="submitPost" method="post">
         <div class="lead">Tags
             <div class="control-group">
-                <input type="text" name="input_tag" id="tags" value="{{ post.tags }}" tabindex="-1" style="display: block;">
+                <input type="text" name="input_tag" id="tagList" value="" tabindex="-1" style="display: block;">
             </div>
         </div>
         <div class="lead">Title
@@ -38,11 +38,11 @@
 <script type="text/javascript" src="{{ url_for('static', filename='js/selectize.min.js') }}"></script>
 <script type="text/javascript" src="{{ url_for('static', filename='js/selectize.js') }}"></script>
 <script type="text/javascript">
-var data = {{ tags | safe }};
+var data = {{ tagList | safe }};
 var items = data.map(function(x) { return { item: x }; });
 
 $(document).ready(function() {
-$('#tags').selectize({
+$('#tagList').selectize({
     delimiter: ', ',
     persist: false,
     options: items,
