--- a/app/templates/tagged_posts.html
+++ b/app/templates/tagged_posts.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 {% import "bootstrap/wtf.html" as wtf %}
+{% import "_macros.html" as macros %}
 
 {% block title %}Tagged Posts{% endblock %}
 
@@ -8,7 +9,7 @@
     <h2>Tagged Posts</h2>
 </div>
 <div id="page-body">
-{% include '_posts.html' %}
+{% include '_tagged_posts.html' %}
 </div>
 
 {% endblock %}
