--- a/app/templates/edit_post.html
+++ b/app/templates/edit_post.html
@@ -11,7 +11,7 @@
     <form name="input" class="form-horizontal" id="submitPost" method="post">
         <div class="lead">Tags
             <div class="control-group">
-                <input type="text" name="input_tag" id="tagList" value="{{ previousTagList }}" tabindex="-1" style="display: block;">
+                <input type="text" name="input_tag" id="tagList" value="{{ previousTagString }}" tabindex="-1" style="display: block;">
             </div>
         </div>
         <div class="lead">Title
