--- a/app/templates/post.html
+++ b/app/templates/post.html
@@ -7,7 +7,7 @@
 {% block page_content %}
 <div id="moderate-comments">
 	{% if current_user.can(Permission.MODERATE_COMMENTS) %}
-	<a href="{{ url_for('main.moderate') }}">
+	<a href="{{ url_for('main.moderate', id=post.id) }}">
 		<span class="label label-danger">Moderate Comments</span>
 	</a>
 	{% endif %}
