--- a/app/templates/_posts.html
+++ b/app/templates/_posts.html
@@ -2,6 +2,8 @@
 {% for post in page_posts %}
     <h1>{{ post[1] }}</h1>
     <h10>{{ post[2] }}</h10>
+    <br>
+    <h13>Posted by {{ post[6].username }}</h13>
     <div class="well">{{ post[3] | safe }}</div>
     <div class="post-footer">
         <a href="{{ url_for('.post', id=post[0]) }}">
@@ -30,9 +32,6 @@
                 <span class="label label-danger">Delete</span>
             </a>
         {% elif current_user.is_director() %}
-            <a href="{{ url_for('.edit', id=post[0]) }}">
-                <span class="label label-primary">Edit [Director]</span>
-            </a>
             <a href="{{ url_for('.delete', id=post[0]) }}">
                 <span class="label label-danger">Delete</span>
             </a>
