--- a/app/templates/new_post.html
+++ b/app/templates/new_post.html
@@ -16,7 +16,7 @@
         </div>
         <div class="lead">Title
             <div class="control-group">
-                <input class="input-block-level" name="input_title" name="Title" required>
+                <input class="input_title" name="input_title" name="Title" maxlength="64" required>
             </div>
         </div>
         <div class="lead">Text
