--- a/app/templates/edit_post.html
+++ b/app/templates/edit_post.html
@@ -16,7 +16,7 @@
         </div>
         <div class="lead">Title
             <div class="control-group">
-                <input value="{{ post.title }}" class="input-block-level" name="input_title" title="input_title" name="Title" required>
+                <input value="{{ post.title }}" class="input_title" name="input_title" title="input_title" name="Title" required>
             </div>
         </div>
         <div class="lead">Text
