Fixed incorrect links on sidebar menu

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -38,8 +38,8 @@
     <ul class="menu">
         <li><a href="{{ url_for('main.index') }}">Home</a></li>
         <li><a href="http://cityshare.nycnet/portal/site/cityshare/?front_door=true">CityShare</a></li>
-        <li><a href="http://cshr-prd-web.nycnet/portal/site/cityshare/menuitem.2598614c2c8f079248f21af9e05789a0/">CityTime</a></li>
-        <li><a href="https://prod.citytime.nycnet/">TimeClock</a></li>
+        <li><a href="https://prod.citytime.nycnet/">CityTime</a></li>
+        <li><a href="http://timeclock.records.nycnet/timeclock/">TimeClock</a></li>
         <li><a href="https://hrb.nycaps.nycnet/">NYCAPS</a></li>
         <li><a href="{{ url_for('main.mis') }}">MIS</a></li>
         <li><a href="{{ url_for('main.lmt') }}">LMT</a></li>
