--- a/app/templates/moderate.html
+++ b/app/templates/moderate.html
@@ -1,15 +1,14 @@
 {% extends "base.html" %}
-{% import "bootstrap/wtf.html" as wtf %}
 {% import "_macros.html" as macros %}
 
-{% block title %}Tagged Posts{% endblock %}
+{% block title %}Comment Moderation{% endblock %}
 
 {% block page_content %}
 <div class="page-header">
-    <h2>Tagged Posts</h2>
+    <h2>Comment Moderation</h2>
 </div>
+{% set moderate = True %}
 <div id="page-body">
-{% include '_posts.html' %}
+{% include '_comments.html' %}
 </div>
-
 {% endblock %}
