--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -43,6 +43,10 @@
         <li><a href="https://hrb.nycaps.nycnet/">NYCAPS</a></li>
         <li><a href="{{ url_for('main.mis') }}">MIS</a></li>
         <li><a href="{{ url_for('main.lmt') }}">LMT</a></li>
+        <li><a href="">Facebook</a></li>
+        <li><a href="">Twitter</a></li>
+        <li><a href="">Instagram</a></li>
+        <li><a href="">Tumblr</a></li>
     </ul>
 </div>
 {% endblock %}
