--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -87,9 +87,15 @@ ul > h10 {
 	font-size: 16px;
 }
 
-#nav-right {
+#nav-topright {
 	margin: 10px 20px 0px 0px;
 	float: right;
+}
+
+#nav-bottomright {
+	float: right;
+	margin: -60px 0px 0px 0px;
+	position: relative;
 }
 
 #navbar-brand {
