--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -22,7 +22,7 @@
             <a id="navbar-brand" href="{{ url_for('main.index') }}">Intranet</a>
             <div id="desc"><h12>NYC Records</h12></div>
         </div>
-        <div id="nav-right">
+        <div id="nav-topright">
             <ul>
                 {% if current_user.is_authenticated() %}
                 <li><a href="{{ url_for('auth.logout') }}">Logout</a></li>
