--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -8,6 +8,16 @@
 {% block page_content %}
 <div class="page-header">
     <h2>Submissions</h2>
+    <div id="nav-bottomright">
+<!--     <form id="index-form" role="form" method="get" action="results">
+        <input type="text" id="input_text" class="form-control" name="user_input" style="text-align: right">
+        <button type="submit" class="btn btn-nyc" id="btn" name="btn" value="Search">Search</button> -->
+            <select>
+                {% for tag in allTags %}
+                    <option value="{{ tag }}">{{ tag }}</option>
+                {% endfor %}
+            </select>
+        </div>
 </div>
 <div id="page-body">
     {% include '_posts.html' %}
