Added links to side menu

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -45,10 +45,10 @@
         <li><a href="https://hrb.nycaps.nycnet/">NYCAPS</a></li>
         <li><a href="{{ url_for('main.mis') }}">MIS</a></li>
         <li><a href="{{ url_for('main.lmt') }}">LMT</a></li>
-        <li><a href="">Facebook</a></li>
-        <li><a href="">Twitter</a></li>
-        <li><a href="">Instagram</a></li>
-        <li><a href="">Tumblr</a></li>
+        <li><a href="https://www.facebook.com/nycrecords?fref=ts/">Facebook</a></li>
+        <li><a href="https://twitter.com/nycrecords/">Twitter</a></li>
+        <li><a href="https://instagram.com/explore/locations/6126741/">Instagram</a></li>
+        <li><a href="http://nycrecords.tumblr.com/">Tumblr</a></li>
     </ul>
 </div>
 {% endblock %}
