Adjusted space between first post title and moderate posts button

--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -124,6 +124,10 @@ ul > h10 {
 	position: relative;
 }
 
+.section #moderate-comments {
+	margin-bottom: 20px;
+}
+
 #newpost {
 	margin-top: 40px;
 	margin-left: 40px;
