--- a/app/templates/tagged_posts.html
+++ b/app/templates/tagged_posts.html
@@ -2,11 +2,11 @@
 {% import "bootstrap/wtf.html" as wtf %}
 {% import "_macros.html" as macros %}
 
-{% block title %}Tagged Posts{% endblock %}
+{% block title %}Results{% endblock %}
 
 {% block page_content %}
 <div class="page-header">
-    <h2>Tagged Posts</h2>
+    <h2>Post Results</h2>
 </div>
 <div id="page-body">
 {% include '_posts.html' %}
