Added email to config.py

--- a/app/templates/tagged_posts.html
+++ b/app/templates/tagged_posts.html
@@ -6,7 +6,7 @@
 
 {% block page_content %}
 <div class="page-header">
-    <h2>Post Results</h2>
+    <h2>Search Results</h2>
 </div>
 <div id="page-body">
 {% include '_posts.html' %}
