--- a/app/templates/post.html
+++ b/app/templates/post.html
@@ -6,7 +6,7 @@
 
 {% block page_content %}
 <div id="moderate-comments">
-	{% if current_user.can(Permission.MODERATE_COMMENTS) %}
+	{% if current_user.can(Permission.ADMINISTER) or current_user == post.author %}
 	<a href="{{ url_for('main.moderate', id=post.id) }}">
 		<span class="label label-danger">Moderate Comments</span>
 	</a>
