Added YouTube to sidebar

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -47,6 +47,7 @@
         <li><a href="{{ url_for('main.lmt') }}">LMT</a></li>
         <li><a href="https://www.facebook.com/nycrecords?fref=ts/">Facebook</a></li>
         <li><a href="https://twitter.com/nycrecords/">Twitter</a></li>
+        <li><a href="https://www.youtube.com/user/NYCDeptofRecords/">YouTube</a></li>
         <li><a href="https://instagram.com/explore/locations/6126741/">Instagram</a></li>
         <li><a href="http://nycrecords.tumblr.com/">Tumblr</a></li>
     </ul>
