--- a/app/templates/_comments.html
+++ b/app/templates/_comments.html
@@ -4,7 +4,8 @@
     <p><i>This comment has been disabled by a moderator.</i></p>
     {% endif %}
     {% if moderate or not comment.disabled %}
-        <h4>{% if comment.body_html %}
+        <h4>
+            {% if comment.body_html %}
             {{ comment.author.username }} -
             {{ moment(comment.timestamp).fromNow() }}
             <br>
