--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,5 +1,4 @@
 {% extends "bootstrap/base.html" %}
-
 {% block title %}Intranet{% endblock %}
 
 {% block head %}
@@ -22,7 +21,7 @@
                 <span class="icon-bar"></span>
             </button>
             <a id="navbar-brand" href="{{ url_for('main.index') }}">Intranet</a>
-            <div id="desc"><h12>NYC Records</h12></div>
+            <div id="desc"><h12>NYC DORIS</h12></div>
         </div>
         <div id="nav-topright">
             <ul>
@@ -32,7 +31,9 @@
                 <li><a href="{{ url_for('auth.login') }}">Login</a></li>
                 {% endif %}
             </ul>
-            <div id="showuser"><h12>{{ current_user.username }}</h12></div>
+            <a href="{{ url_for('.profile') }}">
+                <div id="showuser"><h12>{{ current_user.username }}</h12></div>
+            </a>
         </div>
 </div>
 
