--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -31,9 +31,9 @@
                 <li><a href="{{ url_for('auth.login') }}">Login</a></li>
                 {% endif %}
             </ul>
-            <a href="{{ url_for('.profile') }}">
+            <!-- <a href="{{ url_for('.profile') }}"> -->
                 <div id="showuser"><h12>{{ current_user.username }}</h12></div>
-            </a>
+            <!-- </a> -->
         </div>
 </div>
 
