Added a jinja if statement to profile linked username at top right of the intranet

--- a/app/templates/profile.html
+++ b/app/templates/profile.html
@@ -13,7 +13,9 @@
     	Name: {{ user }}<br>
     	Role: {{ role }}<br>
     	Email: {{ email }}<br>
+    	{% if role == 'Administrator' or role == 'Director' %}
     	Number of Posts: {{ posts }}<br>
+    	{% endif %}
     	Number of Comments: {{ comments }}
     </h4>
     {% if role == 'Administrator' or role == 'Director' %}
