--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -31,7 +31,7 @@
                 <li><a href="{{ url_for('auth.login') }}">Login</a></li>
                 {% endif %}
             </ul>
-            {% if current_user.can(Permission.COMMENT) %}
+            {% if current_user.is_authenticated() %}
             <a href="{{ url_for('.profile') }}">
                 <div id="showuser"><h12>{{ current_user.username }}</h12></div>
             </a>
