--- a/app/templates/_comments.html
+++ b/app/templates/_comments.html
@@ -18,12 +18,14 @@
             </div>
         {% endif %}
         </h4>
+        {% if current_user == comment.author or current_user.is_administrator() %}
         <a href="{{ url_for('.edit_comment', id=comment.id) }}">
             <span class="label label-primary">Edit</span>
         </a>
         <a href="{{ url_for('.delete_comment', id=comment.id) }}">
             <span class="label label-danger">Delete</span>
         </a>
+        {% endif %}
     {% endif %}
 {% if moderate %}
     {% if comment.disabled %}
