Fixed spacing between functions and changed block titles for HTML files

--- a/app/templates/mis.html
+++ b/app/templates/mis.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% import "bootstrap/wtf.html" as wtf %}
 
-{% block title %}MIS{% endblock %}
+{% block title %}Intranet - MIS{% endblock %}
 
 <div class="section">
 {% block page_content %}
