--- a/app/templates/delete_comment.html
+++ b/app/templates/delete_comment.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% import "bootstrap/wtf.html" as wtf %}
 
-{% block title %}Delete Comment{% endblock %}
+{% block title %}Intranet - Delete Comment{% endblock %}
 
 {% block page_content %}
 <div class="page-header">
