--- a/app/templates/edit_comment.html
+++ b/app/templates/edit_comment.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% import "bootstrap/wtf.html" as wtf %}
 
-{% block title %}Edit Comment{% endblock %}
+{% block title %}Intranet - Edit Comment{% endblock %}
 
 {% block page_content %}
 <div class="page-header">
