--- a/app/templates/error.html
+++ b/app/templates/error.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% import "_macros.html" as macros %}
 
-{% block title %}Error Page{% endblock %}
+{% block title %}Intranet - Error Page{% endblock %}
 
 {% block page_content %}
 <div class="page-header">
