--- a/app/templates/lmt.html
+++ b/app/templates/lmt.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% import "bootstrap/wtf.html" as wtf %}
 
-{% block title %}LMT{% endblock %}
+{% block title %}Intranet - LMT{% endblock %}
 
 <div class="section">
 {% block page_content %}
