--- a/app/templates/profile.html
+++ b/app/templates/profile.html
@@ -2,7 +2,7 @@
 {% import "bootstrap/wtf.html" as wtf %}
 {% import "_macros.html" as macros %}
 
-{% block title %}Profile{% endblock %}
+{% block title %}Intranet - Profile{% endblock %}
 
 {% block page_content %}
 <div class="page-header">
