Added Twitter Ticket with username, date created, and text

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -46,8 +46,12 @@
         <li><a href="https://prod.citytime.nycnet/">CityTime</a></li>
         <li><a href="http://timeclock.records.nycnet/timeclock/">TimeClock</a></li>
         <li><a href="https://hrb.nycaps.nycnet/">NYCAPS</a></li>
+        <li><a href="http://www1.nyc.gov/site/olr/index.page/">OLR</a></li>
+        <li><a href="https://www.nycers.org/(S(5q1h533sz52syq45qiawxg55))/index.aspx/">NYCERS</a></li>
+        <li><a href="http://www.nyc.gov/html/dcas/html/employees/psbhome.shtml/">PSBs</a></li>
         <li><a href="{{ url_for('main.mis') }}">MIS</a></li>
         <li><a href="{{ url_for('main.lmt') }}">LMT</a></li>
+        <li><a href="{{ url_for('main.agencypolicies') }}">Agency Policies</a></li>
         <li><a href="https://www.facebook.com/nycrecords?fref=ts/">Facebook</a></li>
         <li><a href="https://twitter.com/nycrecords/">Twitter</a></li>
         <li><a href="https://www.youtube.com/user/NYCDeptofRecords/">YouTube</a></li>
