--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -34,6 +34,15 @@
         </form>
 	</div>
 </div>
+<div id="tweets">
+    <h1>Twitter Ticker</h1>
+    {% for tweet in recent_tweet %}
+        @{{ tweet.user.screen_name }}<br>
+        {{ tweet.created_at }}<br>
+        {{ tweet.text }}<br>
+    {% endfor %}
+    <br>
+</div>
 <div id="page-body">
     {% include '_posts.html' %}
 </div>
