--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -5,7 +5,7 @@
 <div class="section">
 {% block page_content %}
 <div class="page-header">
-    <h2>Submissions</h2>
+    <h2>Home</h2>
     <div id="nav-bottomright">
         <form name="input" class="form-horizontal" id="searchTags" method="post">
             <div class="control-group">
