--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -45,6 +45,10 @@ li a:hover, .page-footer > h3 > a {
     margin-top: 0;
  }
 
+ .dropdown:hover .dropdown-menu li a:hover {
+ 	background-color: #ffae19;
+ }
+
 .section {
 	margin-top: 7%;
 	margin-left: 50px;
@@ -293,4 +297,8 @@ ul > h10 {
 #tweets {
 	margin-top: 40px;
 	margin-left: 40px;
+}
+
+.dropdown li:hover {
+	background-color: #ffae19;
 }
