--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -8,18 +8,18 @@ li > a {
 
 li a:hover, .page-footer > h3 > a {
     text-decoration: none;
-    color: #ffae19;
+    color: #36F064;
 }
 
 .nav {
 	position: fixed;
-    background-color: #62009b;
+    background-color: #5f2da4;
     width: 100%;
     z-index: 1;
 }
 
 .aside {
-	background-color: #62009b;
+	background-color: #5f2da4;
 	width: 16%;
 	height: 100%;
     float: left;
@@ -46,7 +46,7 @@ li a:hover, .page-footer > h3 > a {
  }
 
  .dropdown:hover .dropdown-menu li a:hover {
- 	background-color: #ffae19;
+ 	background-color: #36F064;
  }
 
 .section {
@@ -114,7 +114,7 @@ ul > h10 {
 #navbar-brand {
 	margin-left: 20px;
 	font-size: 40px;
-	color: #ffae19;
+	color: white;
 	text-decoration: none;
 }
 
@@ -150,13 +150,13 @@ ul > h10 {
 	-moz-box-shadow: 0px 10px 14px -7px #7a00c1;
 	-webkit-box-shadow: 0px 10px 14px -7px #7a00c1;
 	box-shadow: 0px 10px 14px -7px #7a00c1;
-	background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #8200ce), color-stop(1, #62009b));
-	background:-moz-linear-gradient(top, #8200ce 5%, #62009b 100%);
-	background:-webkit-linear-gradient(top, #8200ce 5%, #62009b 100%);
-	background:-o-linear-gradient(top, #8200ce 5%, #62009b 100%);
-	background:-ms-linear-gradient(top, #8200ce 5%, #62009b 100%);
-	background:linear-gradient(to bottom, #8200ce 5%, #62009b 100%);
-	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#8200ce', endColorstr='#62009b',GradientType=0);
+	background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #8200ce), color-stop(1, #5f2da4));
+	background:-moz-linear-gradient(top, #8200ce 5%, #5f2da4 100%);
+	background:-webkit-linear-gradient(top, #8200ce 5%, #5f2da4 100%);
+	background:-o-linear-gradient(top, #8200ce 5%, #5f2da4 100%);
+	background:-ms-linear-gradient(top, #8200ce 5%, #5f2da4 100%);
+	background:linear-gradient(to bottom, #8200ce 5%, #5f2da4 100%);
+	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#8200ce', endColorstr='#5f2da4',GradientType=0);
 	background-color:#8200ce;
 	-moz-border-radius:8px;
 	-webkit-border-radius:8px;
@@ -172,14 +172,14 @@ ul > h10 {
 	text-shadow:0px 1px 0px #3d768a;
 }
 #newpost h3 a:hover {
-	background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #62009b), color-stop(1, #8200ce));
-	background:-moz-linear-gradient(top, #62009b 5%, #8200ce 100%);
-	background:-webkit-linear-gradient(top, #62009b 5%, #8200ce 100%);
-	background:-o-linear-gradient(top, #62009b 5%, #8200ce 100%);
-	background:-ms-linear-gradient(top, #62009b 5%, #8200ce 100%);
-	background:linear-gradient(to bottom, #62009b 5%, #8200ce 100%);
-	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#62009b', endColorstr='#8200ce',GradientType=0);
-	background-color:#62009b;
+	background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #5f2da4), color-stop(1, #8200ce));
+	background:-moz-linear-gradient(top, #5f2da4 5%, #8200ce 100%);
+	background:-webkit-linear-gradient(top, #5f2da4 5%, #8200ce 100%);
+	background:-o-linear-gradient(top, #5f2da4 5%, #8200ce 100%);
+	background:-ms-linear-gradient(top, #5f2da4 5%, #8200ce 100%);
+	background:linear-gradient(to bottom, #5f2da4 5%, #8200ce 100%);
+	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#5f2da4', endColorstr='#8200ce',GradientType=0);
+	background-color:#5f2da4;
 }
 #newpost h3 a:active {
 	position: relative;
@@ -204,15 +204,15 @@ ul > h10 {
 }
 
 .section #pagination .pagination li > a {
-	color: #ffae19;
+	color: #36F064;
 }
 
 .section #pagination .pagination li a:hover {
-	background-color: #62009b;
+	background-color: #5f2da4;
 }
 
 .section #pagination .pagination li a:active {
-	background-color: #62009b;
+	background-color: #5f2da4;
 }
 
 .section .section {
@@ -230,6 +230,7 @@ ul > h10 {
 
 .section .page-header {
 	margin-left: 10px;
+	margin-top: 15px;
 	padding-bottom: 15px;
 }
 
@@ -238,7 +239,7 @@ ul > h10 {
 }
 
 .pagination>.active>a, .pagination>.active>span, .pagination>.active>a:hover, .pagination>.active>span:hover, .pagination>.active>a:focus, .pagination>.active>span:focus {
-	background-color: #62009b !important;
+	background-color: #5f2da4 !important;
 	border-color: #007F3B !important;
 }
 
@@ -300,5 +301,5 @@ ul > h10 {
 }
 
 .dropdown li:hover {
-	background-color: #ffae19;
+	background-color: #36F064;
 }
