--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -64,6 +64,7 @@
 <script type="text/javascript" src="{{ url_for('static', filename='js/semantic.min.js') }}"></script>
 <script type="text/javascript">
 $('.ui.dropdown')
-  .dropdown();
+  .dropdown()
+;
 </script>
 {% endblock %}
