Added carets to dropdowns on sidebar

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -48,19 +48,19 @@
         <li><a href="https://prod.citytime.nycnet/">CityTime</a></li>
         <li><a href="http://timeclock.records.nycnet/timeclock/">TimeClock</a></li>
         <li><a href="https://hrb.nycaps.nycnet/">NYCAPS</a></li>
-        <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown">Departments</a>
+        <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown">Departments<span class="caret"></span></a>
         <ul class="dropdown-menu">
             <li><a href="{{ url_for('main.mis') }}">MIS</a></li>
             <li><a href="{{ url_for('main.lmt') }}">LMT</a></li>
         </ul>
-        <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown">Employee Info</a>
+        <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown">Employee Info<span class="caret"></span></a>
         <ul class="dropdown-menu">
             <li><a href="http://www1.nyc.gov/site/olr/index.page/">OLR</a></li>
             <li><a href="https://www.nycers.org/(S(m4z1oy554pem3oudryveam55))/index.aspx">NYCERS</a></li>
             <li><a href="http://www.nyc.gov/html/dcas/html/employees/psbhome.shtml/">PSBs</a></li>
             <li><a href="{{ url_for('main.agencypolicies') }}">Agency Policies</a></li>
         </ul>
-        <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown">Social Media</a>
+        <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown">Social Media<span class="caret"></span></a>
         <ul class="dropdown-menu">
             <li><a href="https://www.facebook.com/nycrecords?fref=ts/">Facebook</a></li>
             <li><a href="https://twitter.com/nycrecords/">Twitter</a></li>
